--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub</title>
-    <h3>fvnfibf</h3>
+    <h3 class="gfg">fvnfibf</h3>
     <h1>gfjkjsdfghj</h1>
 </head>
 <body>
